Set author on response